--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
         </ul>
         <hr>
         <h2>Other</h2>
-        <ul><li><a href="./2/contact.html">Contact me</a></li></ul>
+        <ul><li><a href="./contact.html">Contact me</a></li></ul>
     </body>
 </html>    
