--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             <li>Truck Dispatcher ⭐️⭐️⭐️</li>
         </ul>
         <hr>
-        <h2>Other</h2>
-        <ul><li><a href="./contact.html">Contact me</a></li></ul>
+        <h2>Contact me</h2>
+        <ul>
+            <li><a href="https://portfolio-6d1846.webflow.io/">My portfolio</a></li>
+            <li>dpwebflow@gmail.com</li>
+        </ul>
     </body>
 </html>    
